--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -34,21 +34,21 @@
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
 
-                <Button x:Name="Button_Number0" Content="0" Grid.Column="2" Grid.Row="4" Click="Button_Number_Click" />
-                <Button x:Name="Button_Number1" Content="1" Grid.Column="1" Grid.Row="3" Click="Button_Number_Click" />
-                <Button x:Name="Button_Number2" Content="2" Grid.Column="2" Grid.Row="3" Click="Button_Number_Click" />
-                <Button x:Name="Button_Number3" Content="3" Grid.Column="3" Grid.Row="3" Click="Button_Number_Click" />
-                <Button x:Name="Button_Number4" Content="4" Grid.Column="1" Grid.Row="2" Click="Button_Number_Click" />
-                <Button x:Name="Button_Number5" Content="5" Grid.Column="2" Grid.Row="2" Click="Button_Number_Click" />
-                <Button x:Name="Button_Number6" Content="6" Grid.Column="3" Grid.Row="2" Click="Button_Number_Click" />
-                <Button x:Name="Button_Number7" Content="7" Grid.Column="1" Grid.Row="1" Click="Button_Number_Click" />
-                <Button x:Name="Button_Number8" Content="8" Grid.Column="2" Grid.Row="1" Click="Button_Number_Click" />
-                <Button x:Name="Button_Number9" Content="9" Grid.Column="3" Grid.Row="1" Click="Button_Number_Click" />
+                <Button x:Name="Button_Number0" Content="0" Grid.Column="2" Grid.Row="4" Click="Button_Item_Click" />
+                <Button x:Name="Button_Number1" Content="1" Grid.Column="1" Grid.Row="3" Click="Button_Item_Click" />
+                <Button x:Name="Button_Number2" Content="2" Grid.Column="2" Grid.Row="3" Click="Button_Item_Click" />
+                <Button x:Name="Button_Number3" Content="3" Grid.Column="3" Grid.Row="3" Click="Button_Item_Click" />
+                <Button x:Name="Button_Number4" Content="4" Grid.Column="1" Grid.Row="2" Click="Button_Item_Click" />
+                <Button x:Name="Button_Number5" Content="5" Grid.Column="2" Grid.Row="2" Click="Button_Item_Click" />
+                <Button x:Name="Button_Number6" Content="6" Grid.Column="3" Grid.Row="2" Click="Button_Item_Click" />
+                <Button x:Name="Button_Number7" Content="7" Grid.Column="1" Grid.Row="1" Click="Button_Item_Click" />
+                <Button x:Name="Button_Number8" Content="8" Grid.Column="2" Grid.Row="1" Click="Button_Item_Click" />
+                <Button x:Name="Button_Number9" Content="9" Grid.Column="3" Grid.Row="1" Click="Button_Item_Click" />
 
-                <Button x:Name="Button_OpeningBracket" Content="(" Grid.Column="0" Grid.Row="4" />
-                <Button x:Name="Button_ClosingBracket" Content=")" Grid.Column="1" Grid.Row="4" />
+                <Button x:Name="Button_OpeningBracket" Content="(" Grid.Column="0" Grid.Row="4" Click="Button_Item_Click" />
+                <Button x:Name="Button_ClosingBracket" Content=")" Grid.Column="1" Grid.Row="4" Click="Button_Item_Click" />
 
-                <Button x:Name="Button_Dot" Content="." Grid.Column="3" Grid.Row="4" />
+                <Button x:Name="Button_Dot" Content="." Grid.Column="3" Grid.Row="4" Click="Button_Item_Click" />
                 <Button x:Name="Button_Equals" Content="=" Grid.Column="4" Grid.Row="4" />
 
             </Grid>
