--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,8 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CalculatorWPF"
         mc:Ignorable="d"
-        Title="Calculator"
-        Width="320" Height="480">
+        Width="250" MinWidth="300" MaxWidth="600"
+        Height="375" MinHeight="375" MaxHeight="375"
+        Title="Calculator">
 
     <Border Padding="8" Background="#3f3f3f">
 
@@ -14,7 +15,7 @@
 
             <TextBox x:Name="TextBox_Output" Margin="0 0 0 4" IsReadOnly="True" FontSize="32" Padding="4" Background="#2f2f2f" Foreground="#efefef" />
 
-            <TextBox x:Name="TextBox_Input" Margin="0 4 0 4" FontSize="24" Padding="2" Background="#1f1f1f" Foreground="#dfdfdf" />
+            <TextBox x:Name="TextBox_Input" Margin="0 4 0 4" FontSize="24" Padding="2" Background="#1f1f1f" Foreground="#dfdfdf" KeyDown="TextBox_Input_KeyDown" />
 
             <Grid Margin="-4 0 -4 0">
 
@@ -49,7 +50,23 @@
                 <Button x:Name="Button_ClosingBracket" Content=")" Grid.Column="1" Grid.Row="4" Click="Button_Item_Click" />
 
                 <Button x:Name="Button_Dot" Content="." Grid.Column="3" Grid.Row="4" Click="Button_Item_Click" />
-                <Button x:Name="Button_Equals" Content="=" Grid.Column="4" Grid.Row="4" />
+                <Button x:Name="Button_Equals" Content="=" Grid.Column="4" Grid.Row="4" Click="Button_Equals_Click" />
+
+                <Button x:Name="Button_Plus" Content="+" Grid.Column="4" Grid.Row="3" Click="Button_Item_Click" />
+                <Button x:Name="Button_Minus" Content="-" Grid.Column="0" Grid.Row="3" Click="Button_Item_Click" />
+
+                <Button x:Name="Button_Multiply" Content="*" Grid.Column="4" Grid.Row="2" Click="Button_Item_Click" />
+                <Button x:Name="Button_Divide" Content="/" Grid.Column="0" Grid.Row="2" Click="Button_Item_Click" />
+
+                <Button x:Name="Button_Power" Content="^" Grid.Column="4" Grid.Row="1" Click="Button_Item_Click" />
+                <Button x:Name="Button_Root" Content="v" Grid.Column="0" Grid.Row="1" Click="Button_Item_Click" />
+
+                <Button x:Name="Button_Answer" Content="a" Grid.Column="0" Grid.Row="0" Click="Button_Item_Click" />
+                <Button x:Name="Button_Memory" Content="m" Grid.Column="1" Grid.Row="0" Click="Button_Item_Click" />
+
+                <Button x:Name="Button_MemoryPlus" Content="m+" Grid.Column="2" Grid.Row="0" />
+                <Button x:Name="Button_MemoryMinus" Content="m-" Grid.Column="3" Grid.Row="0" />
+                <Button x:Name="Button_Clear" Content="c" Grid.Column="4" Grid.Row="0" Click="Button_Clear_Click" />
 
             </Grid>
 
